--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     
     <data>
         <variable
@@ -13,32 +15,32 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         tools:context=".editnote.EditNoteFragment"
         android:padding="8dp">
 
-        <!-- TODO: Update blank fragment layout -->
+
         <EditText
             android:id="@+id/edit_note_title"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:hint="@string/hint_title"
+            android:inputType="textCapSentences"
+            android:text="@{editNoteViewModel.note.noteTitle}"
             android:textStyle="bold"
-            android:text="@{editNoteViewModel.currentNote.noteTitle}"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/edit_note_text"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:hint="@string/hint_text"
-            android:text="@{editNoteViewModel.currentNote.noteText}"
+            android:text="@{editNoteViewModel.note.noteText}"
+            android:inputType="textMultiLine"
+            android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
