--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -17,27 +17,28 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="110dp"
         android:onClick="@{() -> clickListener.onClick(note)}">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:elevation="4dp"
-            app:cardCornerRadius="4dp"
+            app:cardCornerRadius="8dp"
             app:cardUseCompatPadding="true"
-            app:contentPadding="16dp"
+            app:contentPadding="8dp"
             >
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/note_title"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/night_primary_dark"
                     tools:text="Title"
                     android:textSize="24sp"
                     android:text="@{note.noteTitle}"/>
@@ -46,8 +47,10 @@
                     android:id="@+id/note_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:textColor="@color/night_primary_light"
                     tools:text="Text"
                     android:textSize="18sp"
+                    android:ellipsize="end"
                     android:text="@{note.noteText}"/>
             </LinearLayout>
         </androidx.cardview.widget.CardView>
