--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -25,10 +25,12 @@
             android:id="@+id/edit_note_title"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:background="#00000000"
             android:hint="@string/hint_title"
             android:inputType="textCapSentences"
             android:text="@{editNoteViewModel.note.noteTitle}"
             android:textStyle="bold"
+            android:textSize="20sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -36,11 +38,14 @@
         <EditText
             android:id="@+id/edit_note_text"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/hint_text"
-            android:text="@{editNoteViewModel.note.noteText}"
-            android:inputType="textMultiLine"
+            android:layout_height="0dp"
+            android:background="#00000000"
             android:ellipsize="end"
+            android:gravity="top"
+            android:hint="@string/hint_text"
+            android:inputType="textMultiLine"
+            android:text="@{editNoteViewModel.note.noteText}"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
