--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -39,6 +39,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
+            android:elevation="8dp"
+            android:backgroundTint="@color/night_primary_dark"
             app:srcCompat="@drawable/ic_add"
             />
 
