--- a/app/src/main/res/menu/menu_edit_note.xml
+++ b/app/src/main/res/menu/menu_edit_note.xml
@@ -8,4 +8,8 @@
         app:showAsAction="ifRoom"
         />
 
+    <item android:id="@+id/action_delete_note"
+        android:title="Delete"
+        app:showAsAction="never"/>
+
 </menu>
