Implemented Dependency Injection using Hilt

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,7 +16,7 @@
     <fragment
         android:id="@+id/editNoteFragment"
         android:name="com.yungjohn.mynotes.editnote.EditNoteFragment"
-        android:label="Note">
+        android:label="Notes">
         <argument
             android:name="noteId"
             app:argType="long" />
