--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -30,6 +30,8 @@
             android:layout_gravity="center"
             android:text="@string/empty_list"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="4dp"
             android:textAlignment="center"
             android:visibility="invisible"/>
 
