--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -20,19 +20,31 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/timestamp"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            android:textSize="14sp"
+            app:setDate="@{editNoteViewModel.note.timestamp}"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="@id/right_margin"
+            app:layout_constraintStart_toStartOf="@id/left_margin"/>
+
         <EditText
             android:id="@+id/edit_note_title"
             android:layout_width="0dp"
-            android:layout_height="60dp"
+            android:layout_height="50dp"
             android:background="#00000000"
             android:hint="@string/hint_title"
             android:inputType="textCapSentences"
             android:text="@{editNoteViewModel.note.noteTitle}"
-            android:textSize="20sp"
+            android:textSize="19sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="@id/right_margin"
             app:layout_constraintStart_toStartOf="@id/left_margin"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/timestamp" />
 
         <EditText
             android:id="@+id/edit_note_text"
@@ -44,7 +56,7 @@
             android:hint="@string/hint_text"
             android:inputType="textMultiLine"
             android:text="@{editNoteViewModel.note.noteText}"
-            android:textSize="18sp"
+            android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/right_margin"
             app:layout_constraintStart_toStartOf="@id/left_margin"
