--- a/app/src/main/res/layout/fragment_notes.xml
+++ b/app/src/main/res/layout/fragment_notes.xml
@@ -33,7 +33,8 @@
             android:layout_marginStart="4dp"
             android:layout_marginEnd="4dp"
             android:textAlignment="center"
-            android:visibility="invisible"/>
+            android:visibility="visible"
+            />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
