--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MyNotes" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MyNotes" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimaryVariant">@color/black</item>
-        <item name="colorPrimary">@color/night_primary_dark</item>
-        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorPrimaryVariant">@color/app_blue</item>
+        <item name="colorPrimary">@color/app_blue</item>
+        <item name="colorOnPrimary">@color/app_blue</item>
         <item name="showTitle">false</item>
 
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/night_primary</item>
+        <item name="colorSecondary">@color/app_blue</item>
         <item name="colorSecondaryVariant">@color/purple_200</item>
         <item name="colorOnSecondary">@color/white</item>
 
@@ -17,6 +17,11 @@
         <!-- Customize your theme here. -->
         <item name="android:fontFamily">@font/noto_sans</item>
         <item name="fontFamily">@font/noto_sans</item>
+    </style>
+
+    <style name="CircularImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 
 </resources>
