--- a/app/src/main/res/layout/fragment_categories.xml
+++ b/app/src/main/res/layout/fragment_categories.xml
@@ -1,17 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout>
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.CategoriesFragment">
+        tools:context=".ui.CategoriesFragment"
+        android:padding="16dp">
 
-        <!-- TODO: Update blank fragment layout -->
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Categories Fragment" />
+            android:id="@+id/categories_text_view"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Categories"
+            android:textSize="32sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
-    </FrameLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/category_personal"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/background_category_personal"
+            app:layout_constraintEnd_toStartOf="@id/category_work"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/categories_text_view">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Personal"
+                app:layout_constraintBottom_toBottomOf="@id/category_personal"
+                app:layout_constraintEnd_toEndOf="@id/category_personal"
+                app:layout_constraintStart_toStartOf="@id/category_personal"
+                app:layout_constraintTop_toTopOf="@id/category_personal" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/category_work"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/background_category_work"
+            app:layout_constraintBottom_toBottomOf="@id/category_personal"
+            app:layout_constraintStart_toEndOf="@id/category_personal"
+            app:layout_constraintEnd_toEndOf="parent"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Work"
+                app:layout_constraintTop_toTopOf="@id/category_work"
+                app:layout_constraintEnd_toEndOf="@id/category_work"
+                app:layout_constraintStart_toStartOf="@id/category_work"
+                app:layout_constraintBottom_toBottomOf="@id/category_work"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/category_recordings"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/background_category_recordings"
+            app:layout_constraintEnd_toStartOf="@id/category_private"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/category_personal"
+            >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Recordings"
+                app:layout_constraintBottom_toBottomOf="@id/category_recordings"
+                app:layout_constraintEnd_toEndOf="@id/category_recordings"
+                app:layout_constraintStart_toStartOf="@id/category_recordings"
+                app:layout_constraintTop_toTopOf="@id/category_recordings" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/category_private"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/background_category_private"
+            app:layout_constraintStart_toEndOf="@id/category_recordings"
+            app:layout_constraintBottom_toBottomOf="@id/category_recordings"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Private"
+                app:layout_constraintTop_toTopOf="@id/category_private"
+                app:layout_constraintEnd_toEndOf="@id/category_private"
+                app:layout_constraintStart_toStartOf="@id/category_private"
+                app:layout_constraintBottom_toBottomOf="@id/category_private"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/category_family"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="4dp"
+            android:background="@drawable/background_category_family"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/category_recordings"
+            app:layout_constraintEnd_toEndOf="@id/category_recordings">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Private"
+                app:layout_constraintTop_toTopOf="@id/category_family"
+                app:layout_constraintEnd_toEndOf="@id/category_family"
+                app:layout_constraintStart_toStartOf="@id/category_family"
+                app:layout_constraintBottom_toBottomOf="@id/category_family"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="76dp"
+            android:layout_marginEnd="16dp"
+            android:elevation="8dp"
+            android:contentDescription="@string/content_desc_add_new_note"
+            app:srcCompat="@drawable/ic_add"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
