Added fragment_record.xml, fragment_recording.xml, RecordFragment.kt, RecordingFragment.kt, RecordingViewModel.kt

--- a/app/src/main/res/navigation/bottom_nav_graph.xml
+++ b/app/src/main/res/navigation/bottom_nav_graph.xml
@@ -32,6 +32,15 @@
         android:id="@+id/record_fragment"
         android:name="com.yungjohn.mynotes.ui.RecordFragment">
 
+        <action
+            android:id="@+id/action_recordFragment_to_recordingFragment"
+            app:destination="@+id/recording_fragment"/>
+
+    </fragment>
+
+    <fragment
+        android:id="@+id/recording_fragment"
+        android:name="com.yungjohn.mynotes.ui.RecordingFragment">
     </fragment>
 
     <fragment
