--- a/app/src/main/res/layout/fragment_recording.xml
+++ b/app/src/main/res/layout/fragment_recording.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.RecordFragment">
+
+        tools:context=".ui.RecordingFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -17,8 +20,9 @@
                 android:id="@+id/record_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="TAP TO RECORD"
+                android:text="RECORDING"
                 android:textSize="26sp"
+                android:textColor="@color/black"
                 android:layout_marginTop="16dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -26,23 +30,36 @@
                 />
 
             <ImageView
-                android:id="@+id/microphone_image"
+                android:id="@+id/pause_play_image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_marginTop="32dp"
-                app:srcCompat="@drawable/ic_microphone"
+                app:srcCompat="@drawable/ic_pause_recording"
                 app:layout_constraintTop_toBottomOf="@id/record_text"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent" />
 
-            <androidx.recyclerview.widget.RecyclerView
+            <TextView
+                android:id="@+id/timer_text"
                 android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_height="wrap_content"
+                android:text="01:45"
+                android:textSize="46sp"
+                android:textAlignment="center"
+                android:textColor="@color/black"
                 android:layout_marginTop="32dp"
-                app:layout_constraintTop_toBottomOf="@id/microphone_image"
+                app:layout_constraintTop_toBottomOf="@id/pause_play_image"
+                app:layout_constraintStart_toStartOf="@id/pause_play_image"
+                app:layout_constraintEnd_toEndOf="@id/pause_play_image"/>
+
+            <ImageView
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                app:srcCompat="@drawable/ic_stop_recording"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/timer_text"/>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
